removed a hard coded string

--- a/src/resources/Rubbish.properties
+++ b/src/resources/Rubbish.properties
@@ -4,3 +4,4 @@ StepCommand=Ok..
 SetSpeedCommand=Wild
 RestartCommand=I'm Bored With This
 FileChooseCommand=Let's Take Her For A Spin
+FileInputPrompt=How Are Feeling Today?
