Trying to get different setups to work

--- a/src/resources/XMLTagNames.properties
+++ b/src/resources/XMLTagNames.properties
@@ -1,12 +1,17 @@
 RulesPackage=cellmodel.rules
 rulesXMLTag=Simulation_Type
+setupTypeTag=Setup_Type
 ParametersTag=Rules_Parameters
 cellTag=Cell
+probTag=Prob
 stateTag=State
 columnTag=Column
 rowTag=Row
 boardHeightTag=Screen_Height
 boardWidthTag=Screen_Width
+probabilitiesKeyword=probabilities
+cellListKeyword=cellList
+stateAttribute=state
 FileErrorMessage=File entered cannot be parsed as an XML file
 MissingTagErrorMessage=Cannot find tag: 
 RulesClassErrorMessage=Issue with desired Simulation Type class: 
