Added tags for quotas

--- a/src/resources/XMLTagNames.properties
+++ b/src/resources/XMLTagNames.properties
@@ -4,6 +4,7 @@ setupTypeTag=Setup_Type
 ParametersTag=Rules_Parameters
 cellTag=Cell
 probTag=Prob
+quotaTag=Quota
 stateTag=State
 columnTag=Column
 rowTag=Row
@@ -11,6 +12,7 @@ boardHeightTag=Screen_Height
 boardWidthTag=Screen_Width
 probabilitiesKeyword=Probabilities
 cellListKeyword=CellList
+quotasKeyword=Quotas
 stateAttribute=state
 FileErrorMessage=File entered cannot be parsed as an XML file
 MissingTagErrorMessage=Cannot find tag: 
