Changed cellTag to Row

--- a/src/resources/XMLTagNames.properties
+++ b/src/resources/XMLTagNames.properties
@@ -2,7 +2,7 @@ RulesPackage=cellmodel.rules
 rulesXMLTag=Simulation_Type
 setupTypeTag=Setup_Type
 ParametersTag=Rules_Parameters
-cellTag=Cell
+cellTag=Row
 probTag=Prob
 quotaTag=Quota
 stateTag=State
