added tags for unnessential tags

--- a/src/resources/XMLTagNames.properties
+++ b/src/resources/XMLTagNames.properties
@@ -1,7 +1,10 @@
 RulesPackage=cellmodel.rules
 rulesXMLTag=Simulation_Type
 setupTypeTag=Setup_Type
-ParametersTag=Rules_Parameters
+parametersTag=Rules_Parameters
+rulesInfoTag=Rules_Info
+gridTag=Grid_Config
+generalCellTag=Cells
 cellTag=Row
 probTag=Prob
 quotaTag=Quota
@@ -18,3 +21,5 @@ FileErrorMessage=File entered cannot be parsed as an XML file
 MissingTagErrorMessage=Cannot find tag: 
 RulesClassErrorMessage=Issue with desired Simulation Type class: 
 SimTypeDoesNotExistErrorMessage=Simulation Type specified in XML file does not exist
+XMLFilesFolder=XMLFiles/
+fileExtension=.xml
