Added a command to save

--- a/src/resources/English.properties
+++ b/src/resources/English.properties
@@ -3,5 +3,6 @@ ContinueCommand =Continue
 StepCommand=Step
 SetSpeedCommand=Set Speed
 RestartCommand=Restart
+SaveCommand=Save
 FileChooseCommand=Submit
 FileInputPrompt=Enter File Path
