Changed FileChooseCommand to ChooseCommand

--- a/src/resources/English.properties
+++ b/src/resources/English.properties
@@ -4,5 +4,5 @@ StepCommand=Step
 SetSpeedCommand=Set Speed
 RestartCommand=Restart
 SaveCommand=Save
-FileChooseCommand=Submit
+ChooseCommand=Submit
 FileInputPrompt=Enter File Path
