--- a/src/resources/StyleComponents.properties
+++ b/src/resources/StyleComponents.properties
@@ -6,3 +6,14 @@ PercentOfNeighbors=1
 Fire0=RED
 Fire1=GREEN
 Fire2=GREY
+Percolation0=BLUE
+Percolation1=WHITE
+Percolation2=BLACK
+GameOfLife0=GREY
+GameOfLife1=BLACK
+Segregation0=WHITE
+Segregation1=BLUE
+Segregation2=RED
+PredatorOrPrey0=BLUE
+PredatorOrPrey1=GREY
+PredatorOrPrey2=YELLOW
