Made UserInterface use style properties file

--- a/src/resources/StyleComponents.properties
+++ b/src/resources/StyleComponents.properties
@@ -1,3 +1,7 @@
+UIScreenWidth=600
+UIScreenHeight=80
+SpeedSetterWidth=50
+Language=English
 NeighborhoodType=Finite
 FiniteTag=Finite
 ToroidalTag=Toroidal
