removed colon from rulesclasserror

--- a/src/resources/XMLTagNames.properties
+++ b/src/resources/XMLTagNames.properties
@@ -19,7 +19,7 @@ quotasKeyword=Quotas
 stateAttribute=state
 FileErrorMessage=File entered cannot be parsed as an XML file
 MissingTagErrorMessage=Cannot find tag: 
-RulesClassErrorMessage=Issue with desired Simulation Type class: 
+RulesClassErrorMessage=Issue with desired Simulation Type class 
 SimTypeDoesNotExistErrorMessage=Simulation Type specified in XML file does not exist
 XMLFilesFolder=XMLFiles/
 fileExtension=.xml
