Fixed spelling mistake in color

--- a/src/resources/StyleComponents.properties
+++ b/src/resources/StyleComponents.properties
@@ -9,7 +9,7 @@ NumberOfCorners=4
 PercentOfNeighbors=1
 StrokeColor=null
 Fire0=RED
-Fire1=GREdEN
+Fire1=GREEN
 Fire2=GREY
 Percolation0=BLUE
 Percolation1=WHITE
