--- a/src/resources/English.properties
+++ b/src/resources/English.properties
@@ -7,3 +7,6 @@ SaveCommand=Save
 ChooseCommand=Submit
 FileInputPrompt=Enter File Path
 NewSimCommand=Create New Simulation
+StateHistoryChartTitle=State History
+ChartXLabel=Cycle Number
+ChartTitle=Number of Cells at Each State vs. Time
