--- a/src/resources/Rubbish.properties
+++ b/src/resources/Rubbish.properties
@@ -3,5 +3,10 @@ ContinueCommand=Hit It
 StepCommand=Ok..
 SetSpeedCommand=Wild
 RestartCommand=I'm Bored With This
-FileChooseCommand=Let's Take Her For A Spin
+SaveCommand=ScreenShot
+ChooseCommand=hmm...
 FileInputPrompt=How Are Feeling Today?
+NewSimCommand=TWINS
+StateHistoryChartTitle=Time Capsule
+ChartXLabel=Feeling Old
+ChartTitle=Some Squiggly Lines
