--- a/src/resources/English.properties
+++ b/src/resources/English.properties
@@ -9,4 +9,4 @@ FileInputPrompt=Enter File Path
 NewSimCommand=Create New Simulation
 StateHistoryChartTitle=State History
 ChartXLabel=Cycle Number
-ChartTitle=Number of Cells at Each State vs. Time
+ChartTitle=Number of Cells at Each State vs. Time (delayed)
