updated langton loop xml

--- a/src/resources/StyleComponents.properties
+++ b/src/resources/StyleComponents.properties
@@ -22,5 +22,8 @@ Segregation2=RED
 PredatorOrPrey0=BLUE
 PredatorOrPrey1=GREY
 PredatorOrPrey2=YELLOW
+RockPaperScissors0=GREY;
+RockPaperScissors1=WHITE;
+RockPaperScissors2=RED:
 NoColorError=No Color as specified by Style Properties, defaulting to white
 NoStrokeColorError=Invalid Stroke Color Color as specified by Style Properties
