--- a/src/resources/StyleComponents.properties
+++ b/src/resources/StyleComponents.properties
@@ -2,7 +2,7 @@ ScreenHeight=600
 ScreenWidth=600
 SpeedSetterWidth=50
 Language=English
-NeighborhoodType=Finite
+NeighborhoodType=Toroidal
 FiniteTag=Finite
 ToroidalTag=Toroidal
 NumberOfCorners=4
