Added cellIdentifier key

--- a/src/resources/XMLTagNames.properties
+++ b/src/resources/XMLTagNames.properties
@@ -23,3 +23,4 @@ RulesClassErrorMessage=Issue with desired Simulation Type class
 SimTypeDoesNotExistErrorMessage=Simulation Type specified in XML file does not exist
 XMLFilesFolder=XMLFiles/
 fileExtension=.xml
+cellIdentifier=Invalid data in Cells tag
