--- a/src/resources/StyleComponents.properties
+++ b/src/resources/StyleComponents.properties
@@ -22,8 +22,12 @@ Segregation2=RED
 PredatorOrPrey0=BLUE
 PredatorOrPrey1=GREY
 PredatorOrPrey2=YELLOW
-RockPaperScissors0=GREY;
-RockPaperScissors1=WHITE;
-RockPaperScissors2=RED:
+RockPaperScissors0=GREY
+RockPaperScissors1=WHITE
+RockPaperScissors2=RED
+ForagingAnts0=WHITE
+ForagingAnts1=GREY
+ForagingAnts2=BROWN
+ForagingAnts3=BLACK
 NoColorError=No Color as specified by Style Properties, defaulting to white
 NoStrokeColorError=Invalid Stroke Color Color as specified by Style Properties
