--- a/src/resources/StyleComponents.properties
+++ b/src/resources/StyleComponents.properties
@@ -7,7 +7,7 @@ FiniteTag=Finite
 ToroidalTag=Toroidal
 NumberOfCorners=3
 PercentOfNeighbors=1
-StrokeColor=WHITE
+StrokeColor=GREEN
 Fire0=RED
 Fire1=GREEN
 Fire2=GREY
